fixed css spacing issue for landing page text

--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -24,7 +24,7 @@
   font-size: 10em;
   color: white;
   font-family: "Dawning of a New Day";
-  margin: -80px 0 0 0;
+  margin: -10px 0 0 0;
   padding: 0 25px 0 0;
   float: right;
   clear: right;
